@@ -38,7 +38,7 @@
 
 #ifndef lint
 #ifdef	DOSCCS
-static char sccsid[] = "@(#)collect.c	2.39 (gritter) 11/26/04";
+static char sccsid[] = "@(#)collect.c	2.40 (gritter) 12/2/04";
 #endif
 #endif /* not lint */
 
@@ -403,13 +403,13 @@ append_attachments(struct attachment *attach, char *names)
 
 FILE *
 collect(struct header *hp, int printheaders, struct message *mp,
-		char *quotefile, int tflag)
+		char *quotefile, int doprefix, int tflag)
 {
 	FILE *fbuf;
 	struct ignoretab *quoteig;
 	int lc, cc, escape, eofcount;
 	int c, t;
-	char *linebuf = NULL, *cp, *quote;
+	char *linebuf = NULL, *cp, *quote = NULL;
 	size_t linesize;
 	char *tempMail = NULL;
 	int getfields;
@@ -527,11 +527,19 @@ collect(struct header *hp, int printheaders, struct message *mp,
 	/*
 	 * Quote an original message
 	 */
-	if (mp != NULL && (quote = value("quote")) != NULL) {
+	if (mp != NULL && (doprefix || (quote = value("quote")) != NULL)) {
 		quoteig = allignore;
 		action = SEND_QUOTE;
-		if (strcmp(quote, "noheading") == 0) {
-			/*EMPTY*/
+		if (doprefix) {
+			quoteig = fwdignore;
+			if ((cp = value("fwdheading")) == NULL)
+				cp = "-------- Original Message --------";
+			if (*cp) {
+				fprintf(collf, "%s\n", cp);
+				fprintf(stdout, "%s\n", cp);
+			}
+		} else if (strcmp(quote, "noheading") == 0) {
+			/*EMPTY*/;
 		} else if (strcmp(quote, "headers") == 0) {
 			quoteig = ignore;
 		} else if (strcmp(quote, "allheaders") == 0) {
@@ -555,8 +563,8 @@ collect(struct header *hp, int printheaders, struct message *mp,
 		cp = value("indentprefix");
 		if (cp != NULL && *cp == '\0')
 			cp = "\t";
-		send(mp, collf, quoteig, cp, action, NULL);
-		send(mp, stdout, quoteig, cp, action, NULL);
+		send(mp, collf, quoteig, doprefix ? NULL : cp, action, NULL);
+		send(mp, stdout, quoteig, doprefix ? NULL : cp, action, NULL);
 	}
 
 	if ((cp = value("escape")) != NULL)
