@@ -3,7 +3,7 @@
 # This file is not overwritten when 'make install' is run in
 # the nail build process again.
 
-# Sccsid @(#)nail.rc	2.6 (gritter) 9/16/04
+# Sccsid @(#)nail.rc	2.7 (gritter) 12/2/04
 
 # Do not forward to mbox by default since this is likely to be
 # irritating for most users today.
@@ -60,3 +60,6 @@ set autocollapse
 # Hide some header fields which are uninteresting for most human readers.
 ignore received in-reply-to message-id references
 ignore mime-version content-transfer-encoding
+
+# Only include selected header fields when forwarding messages.
+fwdretain subject date from to
